--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,7 +13,7 @@
 <body>
     <div class="text-center">
         <h1>Sign up</h1>
-        <form action="/signup" method="POST">
+        <form action="/signup" method="post">
             <div>
                 <label for="username">Email</label>
                 <input type="email" id="email" name="email" required>
