--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,6 +13,9 @@
 <body>
 <div class="text-center">
     <h1>Login</h1>
+    <% if (messages.error) { %>
+        <%= messages.error %>
+    <% } %>
     <form action="/login" method="POST">
         <div>
             <label for="username">Email</label>
