--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,9 +14,9 @@
 <div class="text-center">
     <h1>Login</h1>
     <% if (messages.error) { %>
-        <%= messages.error %>
+       <h3><%= messages.error %></h3>
     <% } %>
-    <form action="/login" method="POST">
+    <form action="/login" method="post">
         <div>
             <label for="username">Email</label>
             <input type="email" id="email" name="email" required>
