--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,7 +13,7 @@
 <body>
     <div class="text-center">
         <h1>Sign up</h1>
-        <form action="/signup" method="post">
+        <form action="/user/signup" method="post">
             <div>
                 <label for="username">Email</label>
                 <input type="email" id="email" name="email" required>
@@ -30,7 +30,7 @@
             </div>
             <button type="submit">Send</button>
         </form>
-        <a href="/login">Login</a>
+        <a href="/user/login">Login</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
