--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,7 @@
         <h1>Sign up</h1>
         <form action="/user/signup" method="post">
             <div>
-                <label for="username">Email</label>
+                <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
             </div>
 
@@ -25,7 +25,7 @@
             </div>
 
             <div>
-                <label for="username">Password</label>
+                <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
             <button type="submit">Send</button>
